# config-nvim

./: .gitignore  .gitmodules  .luarc.json  README.md  coc-settings.json  cspell.yaml  filetype.lua  init.lua  init.vim  init.vim.old  install.sh  mkdp_markdown.css
.githooks/: pre-commit
.github/workflows/: blank.yml  formatter.yml
init/: non_vscode.vim  treesitter.vim  vgit.vim
lua/user/: alpha.lua  autocommands.lua  bufferline.lua  cmp.lua  codecompanion.lua  colorscheme.lua  indentline.lua  keymaps.lua  lilypond_suite.lua  lsp.lua  lualine.lua  marks.lua  nvim-tree.lua  oil.lua  options.lua  plugins.lua  prequit.lua  telescope.lua  test.lua  treesitter.lua  whichkey.lua  yoshi.lua
lua/user/dap/: init.lua  python.lua
lua/user/lazy/: init.lua  plugins.lua
lua/user/lsp/: configs.lua  efm-langserver.lua  handlers.lua  init.lua  null-ls.lua
lua/user/lsp/settings/: efm.lua  (+10 more)
lua/user/nvim-tree/: init.lua  nvim-tree-on-attach.lua
lvim/: config.lua
snippets/: package.json  python.json  toml.json
snippets/snipmate/: bash.snippets  oil.snippets  python.snippets  sh.snippets  toml.snippets  yaml.snippets
snippets/vscode/: package.json  python.json  toml.json
testdata/: .spectral.yaml  cspell.yaml  mypy_error.py  openapi.yaml  pyproject.toml  redocly.yaml  test.md  test.py  test.vue  test.yaml  test1.lua  test2.lua
testdata/functions/: code-length.js
testdata/html/: invalid.html
testdata/http/: http-client.env.json  httpbin.http  user.env.json
testdata/json/: invalid.json
testdata/python_project/: .dmypy.json  mypy_error.py  pyproject.toml
(+64 files in other folders)
