[project]
name = "python_lsp_test"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.17",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
    "sqlalchemy>=2.0.41",
]
[tool.ruff]
line-length = 120
select = ["F", "E", "W", "D"]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
# plugins = ["sqlalchemy.ext.mypy.plugin",]
python_version = "3.13"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest]
path = ["tests"]

[tool.pyright]
reportGeneralTypeIssues = false
